--- a/pom.xml
+++ b/pom.xml
@@ -86,14 +86,14 @@
     <version>5.8.0</version>
 </dependency>
 <!-- ======new ============================================================-->
-<!-- https://mvnrepository.com/artifact/com.sun/tools -->
+<!-- https://mvnrepository.com/artifact/com.sun/tools 
 <dependency>
     <groupId>com.sun</groupId>
     <artifactId>tools</artifactId>
     <version>1.5.0</version>
     <scope>system</scope>
     <systemPath>C:\Program Files\Java\jdk-17\lib\tools-1.5.0.jar</systemPath>
-</dependency>
+</dependency>-->
 
   </dependencies>
 
@@ -113,14 +113,14 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M7</version>
-      <!-- ======new ============================================================-->  
+    <!--    ======new ============================================================ --> 
         <configuration>
-             <testFailureIgnore>true</testFailureIgnore>   
-             <includes>**/*TestNGTestRunner.java</includes>
-         <!--     <suiteXmlFiles>
+      <!--       <testFailureIgnore>true</testFailureIgnore>   
+             <includes>**/*TestNGTestRunner.java</includes>--> 
+         <!--  -->    <suiteXmlFiles>
 			          	<suiteXmlFile>RunnerTestNG.xml</suiteXmlFile>  
 			          	
-					</suiteXmlFiles>--> 
+					</suiteXmlFiles>
            </configuration>
           
       </plugin>
